--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -8,92 +8,85 @@
 ; Please visit documentation for the options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 
-[env:tasmota-ticrelay]
-build_flags            = ${common.build_flags} -DUSE_TICRELAY
-
-[env:tasmota32-ticrelay]
-extends                = env:tasmota32 
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_TICRELAY
-board                  = esp32_4M1200k
-board_build.filesystem = littlefs
-
-[env:tasmota32c3-ticrelay] 
-extends                = env:tasmota32c3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32C3 -DUSE_TICRELAY
-board                  = esp32c3_4M1200k
-board_build.filesystem = littlefs
-
 [env:tasmota-teleinfo]
-build_flags            = ${common.build_flags} -DBUILD_1M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE
-board_build.f_cpu      = 80000000L
+build_flags            = ${common.build_flags} -DBUILD_1M -DUSE_TELEINFO_CURVE
+board_build.f_cpu      = 160000000L
 
-[env:tasmota-teleinfo-4m2m]
-build_flags            = ${common.build_flags} -DBUILD_4M2M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER
+[env:tasmota-teleinfo-4m]
+build_flags            = ${common.build_flags} -DBUILD_4M -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO
 build_unflags          = -DESP8266_4M 
-board                  = esp8266_4M2M
+board                  = esp8266-4M
 board_build.ldscript   = eagle.flash.4m2m.ld
 board_build.filesystem = littlefs
-board_build.f_cpu      = 80000000L
+board_build.f_cpu      = 160000000L
 
-[env:tasmota-teleinfo-16m14m]
-build_flags            = ${common.build_flags} -DBUILD_16M14M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER
-board                  = esp8266_16M14M
+[env:tasmota-teleinfo-16m]
+build_flags            = ${common.build_flags} -DBUILD_16M -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO  
+board                  = esp8266-16M
 board_build.ldscript   = eagle.flash.16m14m.ld
 board_build.filesystem = littlefs
-board_build.f_cpu      = 80000000L
+board_build.f_cpu      = 160000000L
 
 [env:tasmota32-teleinfo]
-extends                = env:tasmota32-arduino30
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
-board                  = esp32_4M1200k
+extends                = env:tasmota32
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER
+board                  = esp32-4M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32-teleinfo-ethernet]
-extends                = env:tasmota32-arduino30
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER -DUSE_ETHERNET
-board                  = esp32_4M1200k
+extends                = env:tasmota32
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER -DUSE_ETHERNET
+board                  = esp32-4M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32-teleinfo-denkyd4]
-extends                = env:tasmota32-arduino30
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
-board                  = denkyd4_8M4M-safeboot
+extends                = env:tasmota32
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER
+board                  = denkyd4-8M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32c3-teleinfo] 
-extends                = env:tasmota32c3-arduino30
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32C3 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
-board                  = esp32c3_4M1200k
+extends                = env:tasmota32c3
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32C3 -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER
+board                  = esp32c3-4M
 board_build.filesystem = littlefs
 
+[env:tasmota32c3-teleinfo-winky]
+extends                = env:tasmota32c3
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKYC3 -DUSE_WINKY
+board                  = esp32c3-4M
+board_build.filesystem = littlefs
+;board_build.f_cpu      = 160000000L
+
 [env:tasmota32c6-teleinfo-winky]
-extends                = env:tasmota32c6-arduino30
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKY -DUSE_TELEINFO -DUSE_WINKY
-board                  = esp32c6_winky
+extends                = env:tasmota32c6
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKYC6 -DUSE_WINKY
+board                  = esp32c6-4M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 160000000L
 
 [env:tasmota32s2-teleinfo] 
-extends                = env:tasmota32s2-arduino30
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
-board                  = esp32s2_4M1200k
+extends                = env:tasmota32s2
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER
+board                  = esp32s2-4M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32s3-teleinfo] 
-extends                = env:tasmota32s3-arduino30
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_4M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
-board                  = esp32s3_4M1200k-safeboot
+extends                = env:tasmota32s3
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_4M -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER
+;board                  = esp32s3-4M
+board                  = esp32s3-qio_qspi_120
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
-[env:tasmota32s3-teleinfo-16m12m] 
-extends                = env:tasmota32s3-arduino30
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_TELEINFO -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTPSERVER -DUSE_RTE_SERVER
-board                  = esp32s3_16M12M-safeboot
+[env:tasmota32s3-teleinfo-16m] 
+extends                = env:tasmota32s3
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER
+board                  = esp32s3-16M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
@@ -108,32 +101,21 @@ board_build.f_cpu      = 240000000L
 default_envs            =
 ; *** Uncomment the line(s) below to select version(s)
 
-;    tasmota-ticrelay
-;    tasmota32-ticrelay
-;    tasmota32c3-ticrelay
-
     tasmota-teleinfo
-    tasmota-teleinfo-4m2m
-    tasmota-teleinfo-16m14m
+    tasmota-teleinfo-4m
+    tasmota-teleinfo-16m
 
-;    tasmota32-safeboot
     tasmota32-teleinfo
     tasmota32-teleinfo-ethernet
     tasmota32-teleinfo-denkyd4
 
-;    tasmota32c3-safeboot
     tasmota32c3-teleinfo
-
-;    tasmota32c6-safeboot
+    tasmota32c3-teleinfo-winky
     tasmota32c6-teleinfo-winky
 
-;    tasmota32s2-safeboot
     tasmota32s2-teleinfo
-
-;    tasmota32s3cdc-safeboot
-;    tasmota32s3-teleinfo
-    tasmota32s3-teleinfo-16m12m
-
+    tasmota32s3-teleinfo
+    tasmota32s3-teleinfo-16m
 
 ;                          tasmota
 ;                          tasmota-debug
@@ -145,23 +127,28 @@ default_envs            =
 ;                          tasmota-zbbridge
 ;                          tasmota-ir
 ;                          tasmota32
+;                          tasmota32solo1
+;                          tasmota32s2
+;                          tasmota32s2cdc
+;                          tasmota32s3
+;                          tasmota32c2
+;                          tasmota32c3
+;                          tasmota32c6
 ;                          tasmota32-zbbrdgpro
 ;                          tasmota32-bluetooth
 ;                          tasmota32-webcam
 ;                          tasmota32-knx
 ;                          tasmota32-lvgl
 ;                          tasmota32-ir
-;                          tasmota32solo1
-;                          tasmota32c3
-;                          tasmota32c3cdc
-;                          tasmota32s2
-;                          tasmota32s2cdc
-;                          tasmota32s3
-;                          tasmota32s3cdc
-;                          tasmota32-odroidgo
-;                          tasmota32-core2
 ;                          tasmota32-nspanel
-;                           tasmota32c6-safeboot
+;                          tasmota32c3ser
+;                          tasmota32c6ser
+;                          tasmota32s3ser
+
+[tasmota]
+; *** Global build / unbuild compile time flags for ALL Tasmota / Tasmota32 [env]
+;build_unflags           =
+build_flags             = -DUSE_BERRY_PARTITION_WIZARD
 
 [env]
 ;build_unflags           = ${common.build_unflags}
@@ -184,32 +171,15 @@ default_envs            =
 ; *** Define serial port used for erasing/flashing/terminal
 ;upload_port             = COM4
 ;monitor_port            = COM4
-lib_ignore              =
-                          Servo(esp8266)
-                          ESP8266AVRISP
-                          ESP8266LLMNR
-                          ESP8266NetBIOS
-                          ESP8266SSDP
-                          SP8266WiFiMesh
-                          Ethernet(esp8266)
-                          GDBStub
-                          TFT_Touch_Shield_V2
-                          ESP8266HTTPUpdateServer
-                          ESP8266WiFiMesh
-                          EspSoftwareSerial
-                          SPISlave
-                          Hash
-; Disable next if you want to use ArduinoOTA in Tasmota (default disabled)
-                          ArduinoOTA
 lib_extra_dirs          = ${library.lib_extra_dirs}
 
 
 [env:tasmota32_base]
 ; *** Uncomment next lines ";" to enable development Tasmota Arduino version ESP32
 ;platform                = https://github.com/tasmota/platform-espressif32.git
-;platform_packages       = framework-arduinoespressif32 @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/1271/framework-arduinoespressif32-lwip_timeout-ed6742e7f0.zip
-;                          framework-arduino-solo1 @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/1273/framework-arduinoespressif32-solo1-release_v4.4-804d12ce82.zip
-;                          framework-arduino-ITEAD @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/1272/framework-arduinoespressif32-ITEAD-release_v4.4-804d12ce82.zip
+;platform_packages       = framework-arduinoespressif32 @ 
+;                          framework-arduino-solo1 @ 
+;                          framework-arduino-ITEAD @ 
 ;build_unflags           = ${esp32_defaults.build_unflags}
 ;build_flags             = ${esp32_defaults.build_flags}
 ;board                   = esp32
@@ -225,31 +195,12 @@ lib_extra_dirs          = ${library.lib_extra_dirs}
 ;monitor_port            = COM4
 ;upload_speed            = 115200
 monitor_speed           = 115200
-upload_resetmethod      = ${common.upload_resetmethod}
-lib_ignore              =
-                          HTTPUpdateServer
-                          ESP RainMaker
-                          WiFiProv
-                          USB
-                          SPIFFS
-                          ESP32 Azure IoT Arduino
-                          ESP32 Async UDP
-                          ESP32 BLE Arduino
-;                          SimpleBLE
-                          NetBIOS
-                          ESP32
-                          Preferences
-                          BluetoothSerial
-; Disable next if you want to use ArduinoOTA in Tasmota32 (default disabled)
-                          ArduinoOTA
-
+;upload_resetmethod      = ${common.upload_resetmethod}
 lib_extra_dirs           = ${library.lib_extra_dirs}
 ; *** ESP32 lib. ALWAYS needed for ESP32 !!!
                           lib/libesp32
 ; *** comment the following line if you dont use LVGL in a Tasmota32 build. Reduces compile time
 ;                          lib/libesp32_lvgl
-; *** comment the following line if you dont use ESP32 Audio in a Tasmota32 build. Reduces compile time
-;                          lib/libesp32_audio
 ; *** uncomment the following line if you use Bluetooth or Apple Homekit in a Tasmota32 build. Reduces compile time
 ;                          lib/libesp32_div
 ; *** uncomment the following line if you use Epaper driver epidy in your Tasmota32 build. Reduces compile time
@@ -277,4 +228,4 @@ lib_extra_dirs           =
 ; *** RF 433 stuff (not RF Bridge). Recommended to disable
 ;                           lib/lib_rf
 ; *** Mostly not used functions. Recommended to disable
-;                           lib/lib_div
+                           lib/lib_div
