--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -9,11 +9,11 @@
 ; http://docs.platformio.org/en/stable/projectconf.html
 
 [env:tasmota-teleinfo]
-build_flags            = ${common.build_flags} -DBUILD_1M -DUSE_TELEINFO_CURVE
+build_flags            = ${common.build_flags} -DBUILD_1M -DUSE_TELEINFO_GRAPH
 board_build.f_cpu      = 160000000L
 
 [env:tasmota-teleinfo-4m]
-build_flags            = ${common.build_flags} -DBUILD_4M -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO
+build_flags            = ${common.build_flags} -DBUILD_4M -DUSE_TELEINFO_GRAPH
 build_unflags          = -DESP8266_4M 
 board                  = esp8266-4M
 board_build.ldscript   = eagle.flash.4m2m.ld
@@ -21,7 +21,7 @@ board_build.filesystem = littlefs
 board_build.f_cpu      = 160000000L
 
 [env:tasmota-teleinfo-16m]
-build_flags            = ${common.build_flags} -DBUILD_16M -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO  
+build_flags            = ${common.build_flags} -DBUILD_16M -DUSE_FTP -DUSE_TELEINFO_GRAPH
 board                  = esp8266-16M
 board_build.ldscript   = eagle.flash.16m14m.ld
 board_build.filesystem = littlefs
@@ -29,55 +29,55 @@ board_build.f_cpu      = 160000000L
 
 [env:tasmota32-teleinfo]
 extends                = env:tasmota32
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH
 board                  = esp32-4M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32-teleinfo-ethernet]
 extends                = env:tasmota32
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER -DUSE_ETHERNET
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_ETHERNET -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH
 board                  = esp32-4M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32-teleinfo-denkyd4]
 extends                = env:tasmota32
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH
 board                  = denkyd4-8M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32c3-teleinfo] 
 extends                = env:tasmota32c3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32C3 -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32C3 -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH
 board                  = esp32c3-4M
 board_build.filesystem = littlefs
 
 [env:tasmota32c3-teleinfo-winky]
 extends                = env:tasmota32c3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKYC3 -DUSE_WINKY
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKYC3 -DUSE_WINKY -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH
 board                  = esp32c3-4M
 board_build.filesystem = littlefs
 ;board_build.f_cpu      = 160000000L
 
 [env:tasmota32c6-teleinfo-winky]
 extends                = env:tasmota32c6
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKYC6 -DUSE_WINKY
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKYC6 -DUSE_WINKY -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH
 board                  = esp32c6-4M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 160000000L
 
 [env:tasmota32s2-teleinfo] 
 extends                = env:tasmota32s2
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH
 board                  = esp32s2-4M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32s3-teleinfo] 
 extends                = env:tasmota32s3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_4M -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_4M -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH
 ;board                  = esp32s3-4M
 board                  = esp32s3-qio_qspi_120
 board_build.filesystem = littlefs
@@ -85,7 +85,8 @@ board_build.f_cpu      = 240000000L
 
 [env:tasmota32s3-teleinfo-16m] 
 extends                = env:tasmota32s3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_TELEINFO_CURVE -DUSE_TELEINFO_HISTO -DUSE_FTP -DUSE_RTE_SERVER
+;platform               = espressif32@6.7.0
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH
 board                  = esp32s3-16M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
@@ -172,7 +173,7 @@ build_flags             = -DUSE_BERRY_PARTITION_WIZARD
 ;upload_port             = COM4
 ;monitor_port            = COM4
 lib_extra_dirs          = ${library.lib_extra_dirs}
-
+lib_deps                = bblanchon/ArduinoJson@^7.2.0
 
 [env:tasmota32_base]
 ; *** Uncomment next lines ";" to enable development Tasmota Arduino version ESP32
@@ -205,6 +206,7 @@ lib_extra_dirs           = ${library.lib_extra_dirs}
 ;                          lib/libesp32_div
 ; *** uncomment the following line if you use Epaper driver epidy in your Tasmota32 build. Reduces compile time
 ;                          lib/libesp32_eink
+;lib_deps                = tobiasschuerg/ESP8266 Influxdb
 
 
 [library]
