--- a/gazpar/platformio_override.ini
+++ b/gazpar/platformio_override.ini
@@ -8,24 +8,24 @@
 ; Please visit documentation for the options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 
-[env:tasmota-gazpar-4m2m]
-build_flags            = ${common.build_flags} -DBUILD_4M2M -DUSE_FTP 
-board                  = esp8266_4M2M
+[env:tasmota-gazpar-4m]
+build_flags            = ${common.build_flags} -DBUILD_4M -DUSE_FTP -DUSE_HISTO
+board                  = esp8266-4M
 board_build.ldscript   = eagle.flash.4m2m.ld
 board_build.filesystem = littlefs
 board_build.f_cpu      = 160000000L
 
-[env:tasmota-gazpar-16m14m]
-build_flags            = ${common.build_flags} -DBUILD_16M14M -DUSE_FTP 
-board                  = esp8266_16M14M
+[env:tasmota-gazpar-16m]
+build_flags            = ${common.build_flags} -DBUILD_16M -DUSE_FTP -DUSE_HISTO
+board                  = esp8266-16M
 board_build.ldscript   = eagle.flash.16m14m.ld
 board_build.filesystem = littlefs
 board_build.f_cpu      = 160000000L
 
 [env:tasmota32-gazpar]
-extends                = env:tasmota32-arduino30 
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_FTP
-board                  = esp32_4M1200k
+extends                = env:tasmota32
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_FTP -DUSE_HISTO
+board                  = esp32-4M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
@@ -39,8 +39,8 @@ board_build.f_cpu      = 240000000L
 ; *** Build/upload environment
 default_envs            =
 ; *** Uncomment the line(s) below to select version(s)
-                tasmota-gazpar-4m2m
-                tasmota-gazpar-16m14m
+                tasmota-gazpar-4m
+                tasmota-gazpar-16m
                 tasmota32-gazpar
 
 ;                          tasmota
@@ -53,23 +53,28 @@ default_envs            =
 ;                          tasmota-zbbridge
 ;                          tasmota-ir
 ;                          tasmota32
+;                          tasmota32solo1
+;                          tasmota32s2
+;                          tasmota32s2cdc
+;                          tasmota32s3
+;                          tasmota32c2
+;                          tasmota32c3
+;                          tasmota32c6
 ;                          tasmota32-zbbrdgpro
 ;                          tasmota32-bluetooth
 ;                          tasmota32-webcam
 ;                          tasmota32-knx
 ;                          tasmota32-lvgl
 ;                          tasmota32-ir
-;                          tasmota32solo1
-;                          tasmota32c3
-;                          tasmota32c3cdc
-;                          tasmota32s2
-;                          tasmota32s2cdc
-;                          tasmota32s3
-;                          tasmota32s3cdc
-;                          tasmota32-odroidgo
-;                          tasmota32-core2
 ;                          tasmota32-nspanel
+;                          tasmota32c3ser
+;                          tasmota32c6ser
+;                          tasmota32s3ser
 
+[tasmota]
+; *** Global build / unbuild compile time flags for ALL Tasmota / Tasmota32 [env]
+;build_unflags           =
+build_flags             = -DUSE_BERRY_PARTITION_WIZARD
 
 [env]
 ;build_unflags           = ${common.build_unflags}
@@ -92,32 +97,15 @@ default_envs            =
 ; *** Define serial port used for erasing/flashing/terminal
 ;upload_port             = COM4
 ;monitor_port            = COM4
-lib_ignore              =
-                          Servo(esp8266)
-                          ESP8266AVRISP
-                          ESP8266LLMNR
-                          ESP8266NetBIOS
-                          ESP8266SSDP
-                          SP8266WiFiMesh
-                          Ethernet(esp8266)
-                          GDBStub
-                          TFT_Touch_Shield_V2
-                          ESP8266HTTPUpdateServer
-                          ESP8266WiFiMesh
-                          EspSoftwareSerial
-                          SPISlave
-                          Hash
-; Disable next if you want to use ArduinoOTA in Tasmota (default disabled)
-                          ArduinoOTA
 lib_extra_dirs          = ${library.lib_extra_dirs}
 
 
 [env:tasmota32_base]
 ; *** Uncomment next lines ";" to enable development Tasmota Arduino version ESP32
 ;platform                = https://github.com/tasmota/platform-espressif32.git
-;platform_packages       = framework-arduinoespressif32 @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/1271/framework-arduinoespressif32-lwip_timeout-ed6742e7f0.zip
-;                          framework-arduino-solo1 @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/1273/framework-arduinoespressif32-solo1-release_v4.4-804d12ce82.zip
-;                          framework-arduino-ITEAD @ https://github.com/Jason2866/esp32-arduino-lib-builder/releases/download/1272/framework-arduinoespressif32-ITEAD-release_v4.4-804d12ce82.zip
+;platform_packages       = framework-arduinoespressif32 @ 
+;                          framework-arduino-solo1 @ 
+;                          framework-arduino-ITEAD @ 
 ;build_unflags           = ${esp32_defaults.build_unflags}
 ;build_flags             = ${esp32_defaults.build_flags}
 ;board                   = esp32
@@ -133,31 +121,12 @@ lib_extra_dirs          = ${library.lib_extra_dirs}
 ;monitor_port            = COM4
 ;upload_speed            = 115200
 monitor_speed           = 115200
-upload_resetmethod      = ${common.upload_resetmethod}
-lib_ignore              =
-                          HTTPUpdateServer
-                          ESP RainMaker
-                          WiFiProv
-                          USB
-                          SPIFFS
-                          ESP32 Azure IoT Arduino
-                          ESP32 Async UDP
-                          ESP32 BLE Arduino
-;                          SimpleBLE
-                          NetBIOS
-                          ESP32
-                          Preferences
-                          BluetoothSerial
-; Disable next if you want to use ArduinoOTA in Tasmota32 (default disabled)
-                          ArduinoOTA
-
+;upload_resetmethod      = ${common.upload_resetmethod}
 lib_extra_dirs           = ${library.lib_extra_dirs}
 ; *** ESP32 lib. ALWAYS needed for ESP32 !!!
                           lib/libesp32
 ; *** comment the following line if you dont use LVGL in a Tasmota32 build. Reduces compile time
 ;                          lib/libesp32_lvgl
-; *** comment the following line if you dont use ESP32 Audio in a Tasmota32 build. Reduces compile time
-;                          lib/libesp32_audio
 ; *** uncomment the following line if you use Bluetooth or Apple Homekit in a Tasmota32 build. Reduces compile time
 ;                          lib/libesp32_div
 ; *** uncomment the following line if you use Epaper driver epidy in your Tasmota32 build. Reduces compile time
@@ -175,9 +144,9 @@ lib_extra_dirs           =
 ; *** Only disabled for Tasmota minimal and Tasmota light. For all other variants needed!
                            lib/lib_basic
 ; **** I2C devices. Most sensors. Disable only if you dont have ANY I2C device enabled
-;                           lib/lib_i2c
+                           lib/lib_i2c
 ; *** Displays. Disable if you dont have any Display activated
-;                           lib/lib_display
+                           lib/lib_display
 ; *** Bear SSL and base64. Disable if you dont have SSL or TLS activated
                            lib/lib_ssl
 ; *** Audio needs a lot of time to compile. Mostly not used functions. Recommended to disable
