--- a/teleinfo/platformio_override.ini
+++ b/teleinfo/platformio_override.ini
@@ -9,11 +9,11 @@
 ; http://docs.platformio.org/en/stable/projectconf.html
 
 [env:tasmota-teleinfo]
-build_flags            = ${common.build_flags} -DBUILD_1M -DUSE_TELEINFO_GRAPH
+build_flags            = ${common.build_flags} -DBUILD_1M
 board_build.f_cpu      = 160000000L
 
 [env:tasmota-teleinfo-4m]
-build_flags            = ${common.build_flags} -DBUILD_4M -DUSE_TELEINFO_GRAPH -DUSE_TELEINFO_HISTO
+build_flags            = ${common.build_flags} -DBUILD_4M
 build_unflags          = -DESP8266_4M 
 board                  = esp8266-4M
 board_build.ldscript   = eagle.flash.4m2m.ld
@@ -21,7 +21,7 @@ board_build.filesystem = littlefs
 board_build.f_cpu      = 160000000L
 
 [env:tasmota-teleinfo-16m]
-build_flags            = ${common.build_flags} -DBUILD_16M -DUSE_FTP -DUSE_TELEINFO_GRAPH -DUSE_TELEINFO_HISTO
+build_flags            = ${common.build_flags} -DBUILD_16M
 board                  = esp8266-16M
 board_build.ldscript   = eagle.flash.16m14m.ld
 board_build.filesystem = littlefs
@@ -29,64 +29,65 @@ board_build.f_cpu      = 160000000L
 
 [env:tasmota32-teleinfo]
 extends                = env:tasmota32
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH -DUSE_TELEINFO_HISTO
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_FTP
 board                  = esp32-4M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32-teleinfo-ethernet]
 extends                = env:tasmota32
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_ETHERNET -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH -DUSE_TELEINFO_HISTO
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_4M -DUSE_FTP -DUSE_ETHERNET
 board                  = esp32-4M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32-teleinfo-denkyd4]
 extends                = env:tasmota32
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH -DUSE_TELEINFO_HISTO
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_DENKYD4 -DUSE_FTP
 board                  = denkyd4-8M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
+custom_files_upload    = https://github.com/tasmota/autoconf/raw/refs/heads/main/esp32/DenkyD4_V1.3a.autoconf
 
 [env:tasmota32c3-teleinfo] 
 extends                = env:tasmota32c3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32C3 -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH -DUSE_TELEINFO_HISTO
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32C3 -DUSE_FTP
 board                  = esp32c3-4M
 board_build.filesystem = littlefs
 
 [env:tasmota32c3-teleinfo-winky]
 extends                = env:tasmota32c3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKYC3 -DUSE_WINKY -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH -DUSE_TELEINFO_HISTO
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKYC3 -DUSE_WINKY
 board                  = esp32c3-4M
 board_build.filesystem = littlefs
-;board_build.f_cpu      = 160000000L
+board_build.f_cpu      = 160000000L
+custom_files_upload    = https://github.com/tasmota/autoconf/raw/refs/heads/main/esp32c3/Winky.autoconf
 
 [env:tasmota32c6-teleinfo-winky]
 extends                = env:tasmota32c6
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKYC6 -DUSE_WINKY -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH -DUSE_TELEINFO_HISTO
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32_WINKYC6 -DUSE_WINKY
 board                  = esp32c6-4M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 160000000L
+custom_files_upload    = https://github.com/tasmota/autoconf/raw/refs/heads/main/esp32c6/Winky.autoconf
 
 [env:tasmota32s2-teleinfo] 
 extends                = env:tasmota32s2
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH -DUSE_TELEINFO_HISTO
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S2 -DUSE_FTP
 board                  = esp32s2-4M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32s3-teleinfo] 
 extends                = env:tasmota32s3
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_4M -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH -DUSE_TELEINFO_HISTO
-;board                  = esp32s3-4M
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_4M -DUSE_FTP
 board                  = esp32s3-qio_qspi_120
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
 
 [env:tasmota32s3-teleinfo-16m] 
 extends                = env:tasmota32s3
-;platform               = espressif32@6.7.0
-build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_FTP -DUSE_RTE_SERVER -DUSE_TELEINFO_GRAPH -DUSE_TELEINFO_HISTO
+build_flags            = ${env:tasmota32_base.build_flags} -DBUILD_ESP32S3_16M -DUSE_FTP
 board                  = esp32s3-16M
 board_build.filesystem = littlefs
 board_build.f_cpu      = 240000000L
@@ -102,21 +103,20 @@ board_build.f_cpu      = 240000000L
 default_envs            =
 ; *** Uncomment the line(s) below to select version(s)
 
-    tasmota-teleinfo
-    tasmota-teleinfo-4m
-    tasmota-teleinfo-16m
+;    tasmota-teleinfo
+;    tasmota-teleinfo-4m
+;    tasmota-teleinfo-16m
 
-    tasmota32-teleinfo
-    tasmota32-teleinfo-ethernet
-    tasmota32-teleinfo-denkyd4
+;    tasmota32-teleinfo
+;    tasmota32-teleinfo-ethernet
+;    tasmota32-teleinfo-denkyd4
 
-    tasmota32c3-teleinfo
-    tasmota32c3-teleinfo-winky
+;    tasmota32c3-teleinfo
+;    tasmota32c3-teleinfo-winky
     tasmota32c6-teleinfo-winky
-
-    tasmota32s2-teleinfo
-    tasmota32s3-teleinfo
-    tasmota32s3-teleinfo-16m
+;    tasmota32s2-teleinfo
+;    tasmota32s3-teleinfo
+;    tasmota32s3-teleinfo-16m
 
 ;                          tasmota
 ;                          tasmota-debug
